@@ -196,6 +196,7 @@
 			<KEYWORD2>$a1</KEYWORD2>
 			<KEYWORD2>$a2</KEYWORD2>
 			<KEYWORD2>$a3</KEYWORD2>
+            <KEYWORD2>$t0</KEYWORD2>
 			<KEYWORD2>$t1</KEYWORD2>
 			<KEYWORD2>$t2</KEYWORD2>
 			<KEYWORD2>$t3</KEYWORD2>
@@ -215,6 +216,7 @@
 			<KEYWORD2>$t9</KEYWORD2>
 			<KEYWORD2>$k0</KEYWORD2>
 			<KEYWORD2>$k1</KEYWORD2>
+            <KEYWORD2>$gp</KEYWORD2>
 			<KEYWORD2>$sp</KEYWORD2>
 			<KEYWORD2>$fp</KEYWORD2>
 			<KEYWORD2>$ra</KEYWORD2>
